--- a/package.json
+++ b/package.json
@@ -13,22 +13,33 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/datetimepicker": "8.3.0",
+    "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "base-64": "^1.0.0",
     "expo": "~53.0.4",
     "expo-blur": "~14.1.4",
+    "expo-camera": "~16.1.6",
     "expo-constants": "~17.1.4",
+    "expo-file-system": "~18.1.10",
     "expo-font": "~13.3.0",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.1.7",
+    "expo-image-manipulator": "~13.1.7",
+    "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.4",
-    "expo-router": "~5.0.3",
+    "expo-location": "~18.1.5",
+    "expo-media-library": "~17.1.6",
+    "expo-router": "^5.1.1",
+    "expo-secure-store": "~14.2.3",
     "expo-splash-screen": "~0.30.7",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.4",
     "expo-system-ui": "~5.0.6",
     "expo-web-browser": "~14.1.6",
+    "jwt-decode": "^4.0.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
@@ -38,15 +49,7 @@
     "react-native-screens": "~4.10.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "zustand": "^5.0.4",
-    "expo-image-picker": "~16.1.4",
-    "expo-file-system": "~18.1.10",
-    "@react-native-community/netinfo": "11.4.1",
-    "@react-native-community/datetimepicker": "8.3.0",
-    "expo-location": "~18.1.5",
-    "expo-camera": "~16.1.6",
-    "expo-media-library": "~17.1.6",
-    "expo-image-manipulator": "~13.1.7"
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
